--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>OSLI</title>
     <link rel="icon" type="image/png" href="icon.png" />
 
+    <meta property="og:url" content="https://osli-internet.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="OSLI">
+    <meta property="og:description" content="Organisation des Services Libres d'Internet">
+    <meta property="og:image" content="OSLI.png">
+
     <meta
       name="description"
       content="Organisation des Services Libres d'Internet"
