--- a/radio.html
+++ b/radio.html
@@ -6,6 +6,12 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="icon.png" />
 
+    <meta property="og:url" content="https://osli-internet.github.io/radio">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="RadioFOD - OSLI">
+    <meta property="og:description" content="Indie rock and more">
+    <meta property="og:image" content="icon.png">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
