--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="OSLI">
     <meta property="og:description" content="Organisation des Services Libres d'Internet">
-    <meta property="og:image" content="OSLI.png">
+    <meta property="og:image" content="icon.png">
 
     <meta
       name="description"
