--- a/radio.html
+++ b/radio.html
@@ -57,7 +57,7 @@
           RadioFOD, hosting all of the latest and greatest indie rock songs as
           well as some classics. There is no chance to be bored with RadioFOD,
           just sit back, relax and enjoy the music! RadioFOD is hosted by
-          mounderfod and Red_Shadow3000.
+          mounderfod and Red_Shadow3000. If you would like to send us a message to read out on the air, send it to mounderfod#1474 on Discord.
         </p>
         <h5 class="card-title">Schedule</h5>
         <p class="card-text">
