Add Google calendar

--- a/radio.html
+++ b/radio.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="icon.png" />
 
-    <meta property="og:url" content="https://osli-internet.github.io/radio">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="RadioFOD - OSLI">
-    <meta property="og:description" content="Indie rock and more">
-    <meta property="og:image" content="icon.png">
+    <meta property="og:url" content="https://osli-internet.github.io/radio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="RadioFOD - OSLI" />
+    <meta property="og:description" content="Indie rock and more" />
+    <meta property="og:image" content="icon.png" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -57,22 +57,25 @@
           RadioFOD, hosting all of the latest and greatest indie rock songs as
           well as some classics. There is no chance to be bored with RadioFOD,
           just sit back, relax and enjoy the music! RadioFOD is hosted by
-          mounderfod and Red_Shadow3000. If you would like to send us a message to read out on the air, send it to mounderfod#1474 on Discord.
+          mounderfod and Red_Shadow3000. If you would like to send us a message
+          to read out on the air, send it to mounderfod#1474 on Discord.
         </p>
         <h5 class="card-title">Schedule</h5>
-        <p class="card-text">
-          There is currently no fixed schedule for the time being, while we
-          figure things out. However, here are some upcoming broadcasts:
-        </p>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            <b>15th June, 14:00 BST</b> - Inaugural Broadcast (w/ mounderfod)
-          </li>
-          <li class="list-group-item">
-            <b>16th June, 17:00 BST</b> - Friday Night Indie (w/ mounderfod &
-            Red_Shadow3000)
-          </li>
-        </ul>
+        <iframe
+          class="mt-2"
+          id="open-web-calendar"
+          style="
+            background: url('https://raw.githubusercontent.com/niccokunzmann/open-web-calendar/master/static/img/loaders/circular-loader.gif')
+              center center no-repeat;
+          "
+          src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?url=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Fical%2F915f2995f1cc7b90b2fe98d67fb351e61a80059293a8b24213fd60fd05011f27%2540group.calendar.google.com%2Fpublic%2Fbasic.ics&amp;starting_hour=11&amp;ending_hour=22&amp;skin=dhtmlxscheduler_flat.css&amp;tab=week&amp;controls=next&amp;controls=previous&amp;controls=date&amp;tabs=week&amp;tabs=agenda"
+          sandbox="allow-scripts allow-same-origin allow-top-navigation"
+          allowTransparency="true"
+          scrolling="no"
+          frameborder="0"
+          height="600px"
+          width="100%"
+        ></iframe>
       </div>
     </div>
   </body>
