Add IRC based chat

--- a/radio.html
+++ b/radio.html
@@ -27,62 +27,61 @@
     ></script>
   </head>
   <body class="container p-3">
-    <p class="display-1 text-center text-primary">RadioFOD</p>
-    <p class="display-6 text-center">Indie rock and more</p>
-    <div class="bg-white p-4 mt-5 mb-3">
-      <p class="h2 mb-3 text-center text-primary font-weight-bolder">
-        Listen live!
-      </p>
-      <script type="text/javascript">
-        var cstrFreePlayerUid = 579686;
-        var cstrFreePlayerTheme = "blue";
-        var cstrFreePlayerColor = "";
-      </script>
-      <script
-        type="text/javascript"
-        src="//corscdn.caster.fm/freeplayer/FreePlanPlayerEmbed.js"
-      ></script>
-      <!--   DO NOT REMOVE THE LINKS BELOW, THEY  WILL BE HIDDEN (AND WILL HELP US A LOT)   -->
-      <a id="cstrFreePlayerBL1" href="//www.caster.fm/"
-        >Free Shoutcast Hosting</a
-      ><a id="cstrFreePlayerBL2" href="//www.caster.fm/"
-        >Radio Stream Hosting</a
-      >
-      <div id="cstrFreePlayerDiv"></div>
-    </div>
-    <div class="card bg-primary-subtle" style="width: 100%">
-      <div class="card-body">
-        <h5 class="card-title">Welcome to RadioFOD</h5>
-        <p class="card-text">
+    <p class="display-1 mb-0 text-center text-primary">RadioFOD</p>
+    <p class="h5 mt-0 text-center">Indie rock and more</p>
+    <div class="row mt-4">
+      <div class="col">
+        <div class="bg-white p-4 mb-3">
+          <p class="h2 mb-3 text-center text-primary font-weight-bolder">
+            Listen live!
+          </p>
+          <script type="text/javascript">
+            var cstrFreePlayerUid = 579686;
+            var cstrFreePlayerTheme = "blue";
+            var cstrFreePlayerColor = "";
+          </script>
+          <script
+            type="text/javascript"
+            src="//corscdn.caster.fm/freeplayer/FreePlanPlayerEmbed.js"
+          ></script>
+          <!--   DO NOT REMOVE THE LINKS BELOW, THEY  WILL BE HIDDEN (AND WILL HELP US A LOT)   -->
+          <a id="cstrFreePlayerBL1" href="//www.caster.fm/"
+            >Free Shoutcast Hosting</a
+          ><a id="cstrFreePlayerBL2" href="//www.caster.fm/"
+            >Radio Stream Hosting</a
+          >
+          <div id="cstrFreePlayerDiv"></div>
+        </div>
+        <iframe width="100%" height="350" scrolling="no" src="https://widget.mibbit.com/?settings=3e4ad43a2e92c85efa0e41e30ce46d8d&server=irc.bs3k.xyz&channel=%23radiofod"></iframe>      </div>
+      <div class="col">
+        <p>
           RadioFOD, hosting all of the latest and greatest indie rock songs as
           well as some classics. There is no chance to be bored with RadioFOD,
           just sit back, relax and enjoy the music! RadioFOD is hosted by
-          mounderfod and Red_Shadow3000. If you would like to send us a message
-          to read out on the air, send it to mounderfod#1474 on Discord.
+          mounderfod and Red_Shadow3000. If you'd like to send us a message, use the chatbox on the left. <br />
+          View the archives
+          <a
+            href="https://drive.google.com/drive/folders/1z-HCUqlSqiRl-l3jzZA-znsFUc-kvIo0?usp=drive_link"
+            >here</a
+          >.
         </p>
-        <h5 class="card-title">Schedule</h5>
-        <iframe
-          class="mt-2"
-          id="open-web-calendar"
-          style="
-            background: url('https://raw.githubusercontent.com/niccokunzmann/open-web-calendar/master/static/img/loaders/circular-loader.gif')
-              center center no-repeat;
-          "
-          src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?url=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Fical%2F915f2995f1cc7b90b2fe98d67fb351e61a80059293a8b24213fd60fd05011f27%2540group.calendar.google.com%2Fpublic%2Fbasic.ics&amp;starting_hour=11&amp;ending_hour=22&amp;skin=dhtmlxscheduler_flat.css&amp;tab=week&amp;controls=next&amp;controls=previous&amp;controls=date&amp;tabs=week&amp;tabs=agenda"
-          sandbox="allow-scripts allow-same-origin allow-top-navigation"
-          allowTransparency="true"
-          scrolling="no"
-          frameborder="0"
-          height="600px"
-          width="100%"
-        ></iframe>
-        <h5 class="card-title mt-3 mb-2">Archives</h5>
-        <iframe
-          src="https://drive.google.com/embeddedfolderview?id=1z-HCUqlSqiRl-l3jzZA-znsFUc-kvIo0#list"
-          width="100%"
-          height="500"
-          frameborder="0"
-        ></iframe>
+            <iframe
+              class="mt-2"
+              id="open-web-calendar"
+              style="
+                background: url('https://raw.githubusercontent.com/niccokunzmann/open-web-calendar/master/static/img/loaders/circular-loader.gif')
+                  center center no-repeat;
+              "
+              src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?url=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Fical%2F915f2995f1cc7b90b2fe98d67fb351e61a80059293a8b24213fd60fd05011f27%2540group.calendar.google.com%2Fpublic%2Fbasic.ics&amp;starting_hour=11&amp;ending_hour=22&amp;skin=dhtmlxscheduler_flat.css&amp;tab=week&amp;controls=next&amp;controls=previous&amp;controls=date&amp;tabs=week"
+              sandbox="allow-scripts allow-same-origin allow-top-navigation"
+              allowTransparency="true"
+              scrolling="no"
+              frameborder="0"
+              height="600px"
+              width="100%"
+            ></iframe>
+          </div>
+        </div>
       </div>
     </div>
   </body>
