Add info to website about IRC

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>OSLI</title>
     <link rel="icon" type="image/png" href="icon.png" />
 
-    <meta property="og:url" content="https://osli-internet.github.io/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="OSLI">
-    <meta property="og:description" content="Organisation des Services Libres d'Internet">
-    <meta property="og:image" content="icon.png">
+    <meta property="og:url" content="https://osli-internet.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="OSLI" />
+    <meta
+      property="og:description"
+      content="Organisation des Services Libres d'Internet"
+    />
+    <meta property="og:image" content="icon.png" />
 
     <meta
       name="description"
@@ -51,10 +54,10 @@
             <b>RadioFOD</b>: A free indie rock radio
             <a href="/radio.html">(link)</a>
           </li>
+          <li>An IRC server <a href="irc://irc.bs3k.xyz">(link)</a></li>
         </ul>
         <p>
           Check this space, as more features will be provided as time goes on.
-          Currently, we are in the process of setting up an IRC server.
         </p>
       </div>
     </div>
