--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <b>RadioFOD</b>: A free indie rock radio
             <a href="/radio.html">(link)</a>
           </li>
-          <li>An IRC server <a href="irc://irc.bs3k.xyz">(link)</a></li>
+          <li><b>An IRC server</b> <a href="irc://irc.bs3k.xyz">(link)</a></li>
         </ul>
         <p>
           Check this space, as more features will be provided as time goes on.
