Add Minecraft server info

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <a href="/radio.html">(link)</a>
           </li>
           <li><b>An IRC server</b> <a href="irc://irc.bs3k.xyz">(link)</a></li>
+          <li>
+            <b>A Minecraft server</b> (54.36.214.247:25591) To be whitelisted,
+            email mounderfod+whitelist &langle;at&rangle; gmail.com or join the
+            #minecraft IRC channel.
+          </li>
         </ul>
         <p>
           Check this space, as more features will be provided as time goes on.
