--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           </li>
           <li><b>An IRC server</b> <a href="irc://irc.bs3k.xyz">(link)</a></li>
           <li>
-            <b>A Minecraft server</b> (54.36.214.247:25591) To be whitelisted,
-            email mounderfod+whitelist &langle;at&rangle; gmail.com or join the
-            #minecraft IRC channel.
+            <b>A Minecraft server</b> (1.20, 54.36.214.247:25591) <br />
+            To be whitelisted, email mounderfod+whitelist &langle;at&rangle;
+            gmail.com or join the #minecraft IRC channel.
           </li>
         </ul>
         <p>
