--- a/index.html
+++ b/index.html
@@ -54,15 +54,14 @@
             <b>RadioFOD</b>: A free indie rock radio
             <a href="/radio.html">(link)</a>
           </li>
-          <li><b>An IRC server</b> <a href="irc://irc.bs3k.xyz">(link)</a></li>
           <li>
             <b>A Minecraft server</b> (1.20, 54.36.214.247:25591) <br />
             To be whitelisted, email mounderfod+whitelist &langle;at&rangle;
-            gmail.com or join the #minecraft IRC channel.
+            gmail.com or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>.
           </li>
         </ul>
         <p>
-          Check this space, as more features will be provided as time goes on.
+          Check this space or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>, as more features will be provided as time goes on.
         </p>
       </div>
     </div>
