--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             To be whitelisted, email mounderfod+whitelist &langle;at&rangle;
             gmail.com or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>.
           </li>
+          <li>
+            <b>A forums page</b>
+            <a href="https://osli.boards.net/">(link)</a>
+          </li>
         </ul>
         <p>
           Check this space or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>, as more features will be provided as time goes on.
