--- a/radio.html
+++ b/radio.html
@@ -35,30 +35,14 @@
           <p class="h2 mb-3 text-center text-primary font-weight-bolder">
             Listen live!
           </p>
-          <script type="text/javascript">
-            var cstrFreePlayerUid = 579686;
-            var cstrFreePlayerTheme = "blue";
-            var cstrFreePlayerColor = "";
-          </script>
-          <script
-            type="text/javascript"
-            src="//corscdn.caster.fm/freeplayer/FreePlanPlayerEmbed.js"
-          ></script>
-          <!--   DO NOT REMOVE THE LINKS BELOW, THEY  WILL BE HIDDEN (AND WILL HELP US A LOT)   -->
-          <a id="cstrFreePlayerBL1" href="//www.caster.fm/"
-            >Free Shoutcast Hosting</a
-          ><a id="cstrFreePlayerBL2" href="//www.caster.fm/"
-            >Radio Stream Hosting</a
-          >
-          <div id="cstrFreePlayerDiv"></div>
+          <iframe src="https://zeno.fm/player/radiofod" width="768" height="300" frameborder="0" scrolling="no"></iframe><a href="https://zeno.fm/" target="_blank" style="display: block; font-size: 0.9em; line-height: 10px;">A Zeno.FM Station</a>
         </div>
-        <iframe width="100%" height="350" scrolling="no" src="https://widget.mibbit.com/?settings=3e4ad43a2e92c85efa0e41e30ce46d8d&server=irc.bs3k.xyz&channel=%23radiofod"></iframe>      </div>
       <div class="col">
         <p>
           RadioFOD, hosting all of the latest and greatest indie rock songs as
           well as some classics. There is no chance to be bored with RadioFOD,
           just sit back, relax and enjoy the music! RadioFOD is hosted by
-          mounderfod and Red_Shadow3000. If you'd like to send us a message, use the chatbox on the left. <br />
+          mounderfod and Red_Shadow3000. If you'd like to send us a message, join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>. <br />
           View the archives
           <a
             href="https://drive.google.com/drive/folders/1z-HCUqlSqiRl-l3jzZA-znsFUc-kvIo0?usp=drive_link"
