--- a/radio.html
+++ b/radio.html
@@ -35,7 +35,7 @@
           <p class="h2 mb-3 text-center text-primary font-weight-bolder">
             Listen live!
           </p>
-          <iframe src="https://zeno.fm/player/radiofod" width="500" height="500" frameborder="0" scrolling="no"></iframe>
+          <iframe src="https://zeno.fm/player/radiofod" style="width: 100%;" height="300" frameborder="0" scrolling="no"></iframe>
         </div>
       <div class="col">
         <p>
