--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <a href="/radio.html">(link)</a>
           </li>
           <li>
-            <b>A Minecraft server</b> (1.20, 54.36.214.247:25591) <br />
-            To be whitelisted, email mounderfod+whitelist &langle;at&rangle;
+            <b>A creative Minecraft server on which we are building a city</b> (1.19, 54.36.214.247:25591) <br />
+            To be whitelisted (and to obtain the modpack), email mounderfod+whitelist &langle;at&rangle;
             gmail.com or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>.
           </li>
           <li>
