--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="/radio.html">(link)</a>
           </li>
           <li>
-            <b>A creative Minecraft server on which we are building a city</b> (1.19, 54.36.214.247:25591) <br />
+            <b>A creative Minecraft server on which we are building a city</b><br /> (1.19, 54.36.214.247:25591)
             To be whitelisted (and to obtain the modpack), email mounderfod+whitelist &langle;at&rangle;
             gmail.com or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>.
           </li>
