--- a/radio.html
+++ b/radio.html
@@ -49,6 +49,15 @@
             >here</a
           >.
         </p>
+        <h3>Listen elsewhere</h3>
+        <p>The stream can now be accessed from any device or app that supports Icecast streams (with metadata included), including mobile apps, desktop players (like MusicBee) and also Discord bots such as Jockey Music (the one running in our Discord).</p>
+        <p>If you'd like to use this feature, use the following links in your player app:</p>
+        <ul>
+          <li><b>Main</b> (use this one first): <a href="https://stream.zeno.fm/cus1qq8kdkzuv">stream.zeno.fm/cus1qq8kdkzuv</a></li>
+          <li><b>M3U</b>: <a href="https://stream.zeno.fm/cus1qq8kdkzuv.m3u">stream.zeno.fm/cus1qq8kdkzuv.m3u</a>li>
+          <li><b>PLS</b>: <a href="https://stream.zeno.fm/cus1qq8kdkzuv.pls">stream.zeno.fm/cus1qq8kdkzuv.pls</a></li>
+        </ul>
+        <p>Additionally, when a human broadcast is not occurring, the radio will run 24/7 playing some indie tracks</p>
             <iframe
               class="mt-2"
               id="open-web-calendar"
