--- a/radio.html
+++ b/radio.html
@@ -57,7 +57,7 @@
           <li><b>M3U</b>: <a href="https://stream.zeno.fm/cus1qq8kdkzuv.m3u">stream.zeno.fm/cus1qq8kdkzuv.m3u</a>li>
           <li><b>PLS</b>: <a href="https://stream.zeno.fm/cus1qq8kdkzuv.pls">stream.zeno.fm/cus1qq8kdkzuv.pls</a></li>
         </ul>
-        <p>Additionally, when a human broadcast is not occurring, the radio will run 24/7 playing some indie tracks</p>
+        <p>Additionally, when a human broadcast is not occurring, the radio will run 24/7 playing some indie tracks.</p>
             <iframe
               class="mt-2"
               id="open-web-calendar"
