--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
             <a href="/radio.html">(link)</a>
           </li>
           <li>
-            <b>A creative Minecraft server on which we are building a city</b><br /> <em>(1.19, 54.36.214.247:25591)</em><br />
-            To be whitelisted (and to obtain the modpack), email mounderfod+whitelist &langle;at&rangle;
-            gmail.com or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>.
+            <b>A GNU social instance</b>
+            <a href="http://osli.rf.gd/">(link)/</a>
           </li>
           <li>
             <b>A forums page</b>
