--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </li>
           <li>
             <b>A GNU social instance</b>
-            <a href="http://osli.rf.gd/">(link)/</a>
+            <a href="http://osli.rf.gd/">(link)</a>
           </li>
           <li>
             <b>A forums page</b>
