--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body class="container p-3">
     <div class="row">
       <div class="col">
-        <img src="OSLI.png" />
+        <img style="width: 40%" src="OSLI.png" />
       </div>
       <div class="col mt-5">
         <h1 class="display-5">Organisation des Services Libres d'Internet</h1>
@@ -61,6 +61,10 @@
           <li>
             <b>A forums page</b>
             <a href="https://osli.boards.net/">(link)</a>
+          </li>
+          <li>
+            <b>A pastebin service (with API)</b>
+            <a href="https://paste.mounderfod.online">(link)</a>
           </li>
         </ul>
         <p>
