--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>OSLI</title>
     <link rel="icon" type="image/png" href="icon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <a style="display: none" rel="me" href="https://mstdn.plus/@OSLI"
+      >Mastodon</a
+    >
 
     <meta property="og:url" content="https://osli-internet.github.io/" />
     <meta property="og:type" content="website" />
@@ -35,7 +42,7 @@
   <body class="container p-3">
     <div class="row">
       <div class="col">
-        <img style="width: 40%" src="OSLI.png" />
+        <img style="height: 20em; float: right" src="OSLI.png" />
       </div>
       <div class="col mt-5">
         <h1 class="display-5">Organisation des Services Libres d'Internet</h1>
@@ -46,30 +53,56 @@
           access media and communicate easily and freely on the Internet.
         </p>
         <p>
-          Currently, due to limited funding, the number of services offered by
-          the organisation is small. However, we do provide:
+          Check this space or join the
+          <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>, as more features
+          will be provided as time goes on.
         </p>
-        <ul>
-          <li>
-            <b>RadioFOD</b>: A free indie rock radio
-            <a href="/radio.html">(link)</a>
-          </li>
-          <li>
-            <b>A GNU social instance</b>
-            <a href="http://osli.rf.gd/">(link)</a>
-          </li>
-          <li>
-            <b>A forums page</b>
-            <a href="https://osli.boards.net/">(link)</a>
-          </li>
-          <li>
-            <b>A pastebin service (with API)</b>
-            <a href="https://paste.mounderfod.online">(link)</a>
-          </li>
-        </ul>
-        <p>
-          Check this space or join the <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>, as more features will be provided as time goes on.
-        </p>
+        <h3 class="mb-3">Services</h3>
+        <div
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
+          style="height: 3em; background-color: lightgray"
+        >
+          <a style="text-decoration: none; font-weight: bold" href="radio.html">
+            <p class="mb-0">
+              <i class="bi bi-broadcast-pin me-2"></i> radioFOD
+            </p>
+          </a>
+        </div>
+        <div
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
+          style="height: 3em; background-color: lightgray"
+        >
+          <a
+            style="text-decoration: none; font-weight: bold"
+            href="http://osli.rf.gd"
+          >
+            <p class="mb-0"><i class="bi bi-postcard me-2"></i> GNU social</p>
+          </a>
+        </div>
+        <div
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
+          style="height: 3em; background-color: lightgray"
+        >
+          <a
+            style="text-decoration: none; font-weight: bold"
+            href="https://share.mounderfod.online"
+          >
+            <p class="mb-0">
+              <i class="bi bi-paperclip me-2"></i> File sharing
+            </p>
+          </a>
+        </div>
+        <div
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
+          style="height: 3em; background-color: lightgray"
+        >
+          <a
+            style="text-decoration: none; font-weight: bold"
+            href="https://paste.mounderfod.online"
+          >
+            <p class="mb-0"><i class="bi bi-code me-2"></i> pastebin</p>
+          </a>
+        </div>
       </div>
     </div>
   </body>
