--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
             </p>
           </a>
         </div>
+        <div
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
+          style="height: 3em; background-color: lightgray"
+        >
+          <a
+            style="text-decoration: none; font-weight: bold"
+            href="https://math.mounderfod.online"
+          >
+            <p class="mb-0">
+              <i class="bi bi-calculator-fill me-2"></i> pyMathEngine
+            </p>
+          </a>
+        </div>
       </div>
     </div>
   </body>
