--- a/index.html
+++ b/index.html
@@ -39,38 +39,20 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="container p-3">
-    <div class="row">
-      <div class="col">
-        <img style="height: 20em; float: right" src="OSLI.png" />
-      </div>
-      <div class="col mt-5">
-        <h1 class="display-5">Organisation des Services Libres d'Internet</h1>
-        <p>
-          The OSLI provides access to various media and Internet services for
-          everyone, free, forever. The organisation is founded upon the
-          principle that everyone, regardless of background, should be able to
-          access media and communicate easily and freely on the Internet.
-        </p>
-        <p>
-          Check this space or join the
-          <a href="https://discord.gg/6p5R2nZ3eX">Discord</a>, as more features
-          will be provided as time goes on.
-        </p>
-        <h3 class="mb-3">Services</h3>
+  <body class="container p-3 mt-4 bg-dark text-light">
+    <h1>~osli</h1>
+    <p class="mt-3 w-50">
+      The OSLI provides access to various media and Internet services for
+      everyone, free, forever. The organisation is founded upon the principle
+      that everyone, regardless of background, should be able to access media
+      and communicate easily and freely on the Internet.
+    </p>
+
+    <b><p>Coming soon: A public access Unix system</p></b>
+
         <div
-          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
-          style="height: 3em; background-color: lightgray"
-        >
-          <a style="text-decoration: none; font-weight: bold" href="radio.html">
-            <p class="mb-0">
-              <i class="bi bi-broadcast-pin me-2"></i> radioFOD
-            </p>
-          </a>
-        </div>
-        <div
-          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
-          style="height: 3em; background-color: lightgray"
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center bg-light w-50"
+          style="height: 3em; "
         >
           <a
             style="text-decoration: none; font-weight: bold"
@@ -80,8 +62,8 @@
           </a>
         </div>
         <div
-          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
-          style="height: 3em; background-color: lightgray"
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center bg-light w-50"
+          style="height: 3em; "
         >
           <a
             style="text-decoration: none; font-weight: bold"
@@ -93,8 +75,8 @@
           </a>
         </div>
         <div
-          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center"
-          style="height: 3em; background-color: lightgray"
+          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center bg-light w-50"
+          style="height: 3em; "
         >
           <a
             style="text-decoration: none; font-weight: bold"
@@ -105,7 +87,5 @@
             </p>
           </a>
         </div>
-      </div>
-    </div>
   </body>
 </html>
