Add signup page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       and communicate easily and freely on the Internet.
     </p>
 
-    <b><p>Coming soon: A public access Unix system</p></b>
+    <b><p><a href="/signup.html">Coming soon: A public access Unix system</a></p></b>
 
         <div
           class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center bg-light w-50"
