--- a/index.html
+++ b/index.html
@@ -3,63 +3,40 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>OSLI</title>
-    <link rel="icon" type="image/png" href="icon.png" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
-    <a style="display: none" rel="me" href="https://mstdn.plus/@OSLI"
-      >Mastodon</a
-    >
-
-    <meta property="og:url" content="https://osli-internet.github.io/" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="OSLI" />
-    <meta
-      property="og:description"
-      content="Organisation des Services Libres d'Internet"
-    />
-    <meta property="og:image" content="icon.png" />
-
-    <meta
-      name="description"
-      content="Organisation des Services Libres d'Internet"
-    />
+    <title>OTVL 1</title>
+    <meta name="description" content="Organisation de Télévision Libre" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet" />
   </head>
-  <body class="container p-3 mt-4 bg-dark text-light">
-    <h1>~osli</h1>
-    <p class="mt-3 w-50">
-      The OSLI provides access to various media and Internet services for
-      everyone, free, forever. The organisation is founded upon the principle
-      that everyone, regardless of background, should be able to access media
-      and communicate easily and freely on the Internet.
-    </p>
-
-    <b><p><a href="/signup.html">Coming soon: A public access Unix system</a></p></b>
-
-        <div
-          class="d-flex m-2 flex-wrap flex-column justify-content-center align-content-center bg-light w-50"
-          style="height: 3em; "
-        >
-          <a
-            style="text-decoration: none; font-weight: bold"
-            href="http://osli.rf.gd"
+  <body>
+    <table>
+      <tr>
+        <td>
+          <video
+            id="stream"
+            class="video-js"
+            controls
+            width="1280"
+            liveUi="true"
+            height="720"
+            poster="Screenshot 2023-09-21 16-59-27.png"
+            data-setup="{}"
           >
-            <p class="mb-0"><i class="bi bi-postcard me-2"></i> GNU social</p>
-          </a>
-        </div>
+            <source
+              src="http://52.56.156.203:8888/mystream/index.m3u8"
+              type="application/x-mpegURL"
+            />
+          </video>
+        </td>
+        <td style="width: 50em">
+          <iframe
+            src="https://tilde.chat/gamja?channels=#osli"
+            height="720"
+            width="500"
+          ></iframe>
+        </td>
+      </tr>
+    </table>
+    <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
   </body>
 </html>
